--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a href="https://instagram.com/umeshverma.02?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" class="icon" id="instagram">
           <i class="fa-brands fa-instagram"></i>
         </a>
-        <a href="https://api.whatsapp.com/send?phone=8969457707" class="icon" id="whatsapp" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=+91 8969457707" class="icon" id="whatsapp" target="_blank">
           <i class="fa-brands fa-whatsapp"></i>
         </a>
              
