--- a/index.html
+++ b/index.html
@@ -51,24 +51,24 @@
       <h3>Share this via</h3>
 
       
-      <div class="icon-container">
-        <a href="https://www.facebook.com/profile.php?id=100073449289651" class="icon" id="facebook">
-          <i class="fa-brands fa-facebook-f"></i>
-        </a>
-        <a href="https://twitter.com/umesh_122" class="icon" id="twitter">
-          <i class="fa-brands fa-twitter"></i>
-        </a>
-        <a href="https://instagram.com/umeshverma.02?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" class="icon" id="instagram">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-        <a href="https://api.whatsapp.com/send?phone=+91 8969457707" class="icon" id="whatsapp" target="_blank">
-          <i class="fa-brands fa-whatsapp"></i>
-        </a>
-             
-        <a href="https://web.telegram.org/k/" class="icon" id="telegram">
-          <i class="fa-brands fa-telegram"></i>
-        </a>
-      </div>
+     <div class="icon-container">
+  <a href="https://www.facebook.com/profile.php?id=100073449289651" class="icon" id="facebook">
+    <i class="fa-brands fa-facebook-f"></i>
+  </a>
+  <a href="https://twitter.com/umesh_122" class="icon" id="twitter">
+    <i class="fa-brands fa-twitter"></i>
+  </a>
+  <a href="https://instagram.com/umeshverma.02?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" class="icon" id="instagram">
+    <i class="fa-brands fa-instagram"></i>
+  </a>
+  <a href="https://api.whatsapp.com/send?phone=+91 8969457707" class="icon" id="whatsapp" target="_blank">
+    <i class="fa-brands fa-whatsapp"></i>
+  </a>
+  <a href="https://t.me/username?start=8969457707" class="icon" id="telegram">
+  <i class="fa-brands fa-telegram"></i>
+</a>
+</div>
+
     </div>
 
 
