--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="wrapper">
     <div class="card-wrapper">
       <div>
-        <img src="./assets/profile.jpeg" alt="user" />
+        <img src="./assets/umesh.jpeg" alt="user" />
       </div>
       <div class="user-name">
         <h2>Umesh kumar</h2>
@@ -58,14 +58,14 @@
   <a href="https://twitter.com/umesh_122" class="icon" id="twitter">
     <i class="fa-brands fa-twitter"></i>
   </a>
-  <a href="https://instagram.com/umeshverma.02?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" class="icon" id="instagram">
+  <a href="https://instagram.com/verma_umesh01?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==" class="icon" id="instagram">
     <i class="fa-brands fa-instagram"></i>
   </a>
-  <a href="https://api.whatsapp.com/send?phone=+91 8969457707" class="icon" id="whatsapp" target="_blank">
-    <i class="fa-brands fa-whatsapp"></i>
+  <a href="https://www.linkedin.com/in/umesh-kumar-aa2286230/" class="icon" id="LinkedIn" target="_blank">
+    <i class="fa-brands fa-LinkedIn"></i>
   </a>
-  <a href="https://t.me/username?start=8969457707" class="icon" id="telegram">
-  <i class="fa-brands fa-telegram"></i>
+  <a href="https://github.com/um500" class="icon" id="github">
+  <i class="fa-brands fa-Git-Hub"></i>
 </a>
 </div>
 
