--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
   <!-- Overlay -->
   <div class="overlay" onclick="closeModal()"></div>
 
-  <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous">
+    </script>
   <script src="./script.js"></script>
 </body>
 
