--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     <i class="fa-brands fa-instagram"></i>
   </a>
   <a href="https://www.linkedin.com/in/umesh-kumar-aa2286230/" class="icon" id="LinkedIn" target="_blank">
-    <i class="fa-brands fa-linkedin icon"></i>
+    <i class="fa-brands fa-linkedin "></i>
   </a>
   <a href="https://github.com/um500" class="icon" id="github">
-  <i class="fa-brands fa-github icon"></i>
+  <i class="fa-brands fa-github "></i>
 </a>
 </div>
 
